HappyFlock App Upload Attempt

--- a/manifest.plist
+++ b/manifest.plist
@@ -11,25 +11,25 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://normant.me/TerrierCheck.ipa</string>
+					<string>https://normant.me/Happy-Flock.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://normant.me/terriercheck_image.57x57.png</string>
+					<string>https://normant.me/Happy-Flock_image.57x57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://normant.me/terriercheck_image.512x512.png</string>
+					<string>https://normant.me/Happy-Flock_image.512x512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>terriers.terrierCheck</string>
+				<string>HappyTweets.Happy-Flock</string>
 				<key>bundle-version</key>
 				<string>1.0</string>
 				<key>kind</key>
@@ -37,7 +37,7 @@
 				<key>platform-identifier</key>
 				<string>com.apple.platform.iphoneos</string>
 				<key>title</key>
-				<string>TerrierCheck</string>
+				<string>Happy Flock</string>
 			</dict>
 		</dict>
 	</array>
