--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,83 @@ images/.DS_Store
 .DS_Store
 .DS_Store
 .DS_Store
+.gitignore 2
+about 2.css
+about 2.html
+android-chrome-192x192 2.png
+android-chrome-384x384 2.png
+apple-touch-icon 2.png
+browserconfig 2.xml
+Case Study - Spark! Innovation Fellowship 2.pdf
+CNAME 2
+favicon 2.ico
+favicon-16x16 2.png
+favicon-32x32 2.png
+Happy-Flock 2.ipa
+images/emoji-square-gradient-yellow-red 2.png
+images/happyflock 2.png
+images/highlight-buhpc 2.png
+images/highlight-hobbies 2.png
+images/highlight-innovationcouncil 2.png
+images/highlight-languages 2.png
+images/highlight-productvision 2.png
+images/highlight-shpe 2.png
+images/highlight-skills 2.png
+images/icon 2.png
+images/isef-logo-square 2.png
+images/isef/arizona 2.jpeg
+images/isef/banner 2.jpg
+images/isef/CBIO026_1 2.PNG
+images/isef/CBIO026_2 2.PNG
+images/isef/EGPH024T_0 2.mp4
+images/isef/EGPH024T_1 2.png
+images/isef/EGPH024T_2 2.PNG
+images/isef/top-banner 2.jpeg
+images/Memoji - WWDC 2.jpg
+images/Memoji Render 2.mov
+images/Memoji Render 2.mp4
+images/memoji-banner 2.png
+images/memoji-code 2.png
+images/my-science-guide 2.png
+images/myscienceguide/Colorful Background 2.png
+images/myscienceguide/Facebook Ad 2.png
+images/myscienceguide/Mockups 2.png
+images/myscienceguide/My Science Guide Header 2.png
+images/myscienceguide/Projects Showcase 2.jpg
+images/myscienceguide/Team Pictures/eunice 2.jpg
+images/myscienceguide/Team Pictures/gagan 2.jpeg
+images/myscienceguide/Team Pictures/norman 2.jpeg
+images/myscienceguide/Team Pictures/weiqian 2.jpg
+images/myscienceguide/User Persona - mentor 2.jpg
+images/myscienceguide/User Persona - student 2.jpg
+images/myscienceguide/Wireframes 2.png
+images/picture-of-me-desktop 2.jpg
+images/picture-of-me-mobile 2.jpeg
+images/pr-logo-square 2.jpeg
+images/prits/.gitkeep 2
+images/prits/PR Header 2.png
+images/prits/PRGOV Header 2.png
+images/prits/Services Model 2.png
+images/spark-logo-square 2.png
+images/terriercheck 2.png
+images/veranahealth 2.png
+images/veranahealth 2.webp
+in-construction-sign 2.css
+in-construction-sign 2.html
+index 2.css
+index 2.html
+ISEF 2.html
+manifest 2.plist
+manifest-TERRIERCHECK 2.plist
+mstile-150x150 2.png
+my-science-guide 2.css
+my-science-guide 2.html
+puerto-rico-digital-transformation 2.html
+README 2.md
+resources/Understand Presentation 2.pdf
+Resume - Norman A Toro Vega 2.pdf
+safari-pinned-tab 2.svg
+site 2.webmanifest
+Slide Deck 2.pdf
+Technology Innovation Slide Deck.pdf
+TerrierCheck-NOT_USED 2.ipa
